--- a/.github/workflows/gitlab-sync.yml
+++ b/.github/workflows/gitlab-sync.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout GitHub repository
         uses: actions/checkout@v3
+        with:
+            fetch-depth: 0
 
       - name: Push to GitLab
         run: |
