adding a better transformer

--- a/external_libs/PredTrAD/config/epx4/myconfig.json
+++ b/external_libs/PredTrAD/config/epx4/myconfig.json
@@ -1,7 +1,7 @@
 {
   "data_pattern":        "data/myData/*.parquet",
-  "window_size":         360,
-  "stride_size":         10,
+  "window_size":         180,
+  "stride_size":         20,
   "feature_min":         0.0,
   "feature_max":         1.0,
   "level1_filter":       "",
@@ -13,7 +13,7 @@
   "dropout":             0.1,
 
   "model_name":          "PredTrAD_v1",
-  "dataset":             "testdata",
+  "dataset":             "mydata",
   "entity":              "sensor1",
   "retrain":             true,
   "shuffle":             true,
@@ -22,10 +22,11 @@
   "n_epochs":            10,
   "hyp_lr":              0.0001,
   "hyp_criterion":       "MSE",
-  "hyp_percentage":      1.0,
+  "hyp_percentage":      0.5,
 
   "init_score":          [],
   "lm_d0":               0.99995,
   "lm_d1":               1.06,
-  "delta":               1.0
+  "delta":               1.0,
+  "batch_size":          16
 }
