--- a/external_libs/PredTrAD/config/epx4/myconfig.json
+++ b/external_libs/PredTrAD/config/epx4/myconfig.json
@@ -13,13 +13,13 @@
   "dim_feedforward":     1024,
   "dropout":             0.05,
 
-  "model_name":          "PredTrAD_v1",
+  "model_name":          "PredTrAD_v2",
   "dataset":             "mydata",
   "entity":              "sensor1",
   "retrain":             true,
   "shuffle":             true,
-  "val":                 0.15,
-  "mlflow_experiment":   "Experiment_4b",
+  "val":                 0,
+  "mlflow_experiment":   "Experiment_4",
 
   "n_epochs":            60, 
   "hyp_lr":              0.0005,
@@ -27,11 +27,13 @@
   "hyp_percentage":      0.5,
 
   "init_score":          [],
-  "lm_d0":               0.9999, 
-  "lm_d1":               1.02,
+  "lm_d0":               0.995, 
+  "lm_d1":               1.20,
   "delta":               0.5,
   "batch_size":          32,
   "val_every": 1,
-  "scaler": "sk_minmax"
+  "scaler": "sk_minmax",
+  "val_split_files": 0, 
+  "val_split_frac": 0
 
 }
